Agregado formulario y datos a contacto.html
También se corrigió un enlace en el footer

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <h3 class="font-bold text-2xl">Información</h3>
                 <ul class="mt-4">
                     <li class="mt-2"><a href="productos.html">Tienda</a></li>
-                    <li class="mt-2"><a href="nosotros.html#distribuidores">Distribuidores</a></li>
+                    <li class="mt-2"><a href="contacto.html#distribuidores">Distribuidores</a></li>
                     <li class="mt-2"><a href="nosotros.html">Nosotros</a></li>
                     <li class="mt-2"><a href="contacto.html">Contacto</a></li>
                 </ul>
