--- a/contacto.html
+++ b/contacto.html
@@ -30,23 +30,55 @@
         </div>
     </div>
 
-    <section class="flex flex-wrap mt-10 w-[90%] justify-center gap-5 mx-auto">
+    <div class="flex flex-wrap mt-10 w-[90%] justify-center gap-5 mx-auto">
         <!--Artículo de información de contacto-->
-        <article class="bg-indigo-50 w-[49%] shadow-md shadow-gray-400 p-4">
-                <h2 class="text-3xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Servicio al cliente</h2>
-                <p class="mt-4">Somos una empresa dedicada a la venta de indumentaria a través de una tienda online, creada con la intención de ofrecer una alternativa moderna, accesible y confiable para quienes buscan renovar su estilo sin complicaciones. Nacimos con la idea de unir moda y tecnología, brindando una experiencia de compra que permita explorar tendencias, comparar opciones y recibir productos de calidad sin salir de casa. Nuestro propósito es acompañar a cada cliente en su manera única de vestir, entendiendo que la moda es una forma personal de expresión.</p>
-                
-        </article>
+        <div class="w-[49%] flex flex-wrap gap-5">
+            <article class="bg-indigo-50 w-full shadow-md shadow-gray-400 p-4">
+                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Servicio al cliente</h2>
+                    <p class="mt-4 text-center"><strong>Teléfono:</strong> <a href="tel:+54-383-4977878">+54-383-4977878</a></p>
+                    <p class="mt-2 text-center"><strong>Email: </strong><a href="http://contacto@crudo.com">contacto@crudo.com</a></p>
+                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.facebook.com">
+                        <img class="size-5 inline-block" src="img/icons/icon-facebook-dark.png" alt="ícono facebook">
+                        <span class="ml-2">Síguenos en Facebook</span>
+                    </a>
+                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.x.com">
+                        <img class="size-5 inline-block" src="img/icons/icon-x-dark.png" alt="ícono x">
+                        <span class="ml-2">Síguenos en X</span>
+                    </a>
+                    <a class="mt-2 w-full inline-flex justify-center items-center" href="https://www.instagram.com">
+                        <img class="size-5 inline-block" src="img/icons/icon-instagram-dark.png" alt="ícono instagram">
+                        <span class="ml-2">Síguenos en Instagram</span>
+                    </a>
+            </article>
+            <article class="bg-indigo-50 w-full shadow-md shadow-gray-400 p-4" id="distribuidores">
+                    <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Distribuidores</h2>
+                    <p class="mt-2 text-center"><strong>Catamarca:</strong> Presidente castillo 1755</p>
+                    <p class="mt-2 text-center"><strong>Córdoba:</strong> Miguel Calixto del Corro 1057</p>
+                    <p class="mt-2 text-center"><strong>La Rioja:</strong> Av. Monseñor e. Angelelli 980</p>
+                    <p class="mt-2 text-center"><strong>Buenos Aires:</strong> Av. Tte. Gral. Donato Álvarez 407</p>
+            </article>
+        </div>
+
         <!--Artículo de formulario-->
         <article class="bg-indigo-50 w-[49%] shadow-md shadow-gray-400 p-4">
-                <h2 class="text-3xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Contáctanos</h2>
-                <p class="mt-4">Somos una empresa dedicada a la venta de indumentaria a través de una tienda online, creada con la intención de ofrecer una alternativa moderna, accesible y confiable para quienes buscan renovar su estilo sin complicaciones. Nacimos con la idea de unir moda y tecnología, brindando una experiencia de compra que permita explorar tendencias, comparar opciones y recibir productos de calidad sin salir de casa. Nuestro propósito es acompañar a cada cliente en su manera única de vestir, entendiendo que la moda es una forma personal de expresión.</p>
+                <h2 class="text-2xl text-center text-indigo-50 ms:pl-3 w-full font-bold py-2 bg-indigo-400">Contáctanos</h2>
+                <form action="formularioEnviado.html">
+                    <label class="block w-full mt-4 font-semibold" for="nombre">Nombre</label>
+                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="text" name="nombre" id="nombre" placeholder="Ej: Samuel Jordan" required>
+                    <label class="block w-full mt-4 font-semibold" for="email">Email</label>
+                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="email" name="email" placeholder="email@ejemplo.com" required>
+                    <label class="block w-full mt-4 font-semibold" for="telefono">Telefono <small>(opcional)</small></label>
+                    <input class="block w-full h-10 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" type="tel" name="telefono" id="telefono" placeholder="+54-123-4567890">
+                    <label class="block w-full mt-4 font-semibold" for="mensaje">Mensaje <small>(opcional)</small></label>
+                    <textarea class="block w-full h-20 p-2 bg-indigo-200 focus:bg-indigo-100 focus:outline-2 focus:outline-indigo-400" name="mensaje" id="mensaje" placeholder="Mensaje..."></textarea>
+                    <input class="w-40 h-10 mt-4 mx-auto block justify-center items-center text-2xl text-indigo-50 bg-indigo-600 cursor-pointer hover:border-indigo-700 hover:bg-indigo-700" type="submit" value="Enviar">
+                </form>
         </article>
-    </section>
+    </div>
 
     <!--Sección de artículos pequeños-->
     <section class="bg-indigo-50 w-[90%] shadow-md shadow-gray-400 p-4 mx-auto mt-10">
-        <h2 class="text-3xl text-center text-indigo-50 w-full font-bold py-2 bg-indigo-400">Nuestros objetivos</h2>
+        <h2 class="text-3xl text-center text-indigo-50 w-full font-bold py-2 bg-indigo-400">Preguntas frecuentes</h2>
         <div class="flex flex-wrap gap-2 mt-5">
 
             <article class="bg-indigo-200 w-full md:w-[49%] shadow-md shadow-gray-400 p-2 mx-auto flex flex-wrap lg:flex-nowrap justify-end gap-2">
@@ -158,7 +190,7 @@
                 <h3 class="font-bold text-2xl">Información</h3>
                 <ul class="mt-4">
                     <li class="mt-2"><a href="productos.html">Tienda</a></li>
-                    <li class="mt-2"><a href="nosotros.html#distribuidores">Distribuidores</a></li>
+                    <li class="mt-2"><a href="contacto.html#distribuidores">Distribuidores</a></li>
                     <li class="mt-2"><a href="nosotros.html">Nosotros</a></li>
                     <li class="mt-2"><a href="contacto.html">Contacto</a></li>
                 </ul>
