--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crudo Style Clothes</title>
+    <title>Nosotros - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -24,10 +24,16 @@
     </header>
 
     <!--Portada-->
-    <div class="w-full h-40 bg-[url(img/bg-div4.webp)] bg-cover bg-center">
+    <div class="w-full h-40 bg-[url(img/nosotros-bg-div.webp)] bg-cover bg-center">
         <div class="size-full  bg-[#00000050] flex justify-center items-center">
             <h2 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Sobre nosotros</h2>
         </div>
+    </div>
+
+    <!--Barra de contacto-->
+    <div class="text-indigo-50 py-3 px-10 bg-indigo-400 flex flex-wrap lg:flex-nowrap justify-center items-center gap-4">
+        <p class="text-xl font-semibold text-center lg:text-left">Contáctanos si tienes dudas o consultas</p>
+        <a class="inline-flex justify-center items-center text-indigo-50 w-45 h-10 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="contacto.html">Contactar</a>
     </div>
 
     <!--Artículo grande-->
@@ -136,14 +142,8 @@
         </div>
     </div>
 
-    <!--Barra de contacto-->
-    <div class="text-indigo-50 mt-15 py-10 px-10 bg-indigo-400 flex flex-wrap lg:flex-nowrap justify-center items-center gap-4">
-        <p class="text-3xl font-bold text-center lg:text-left">Contáctanos si tienes dudas o consultas</p>
-        <a class="inline-flex justify-center items-center text-indigo-50 text-xl w-45 h-12 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="contacto.html">Contactar</a>
-    </div>
-
     <!--Pie de página-->
-    <footer class="h-195 sm:h-90 md:h-60 bg-indigo-700 text-indigo-50">
+    <footer class="h-195 sm:h-90 md:h-60 mt-10 bg-indigo-700 text-indigo-50">
         <div class="md:hidden pt-10 text-left sm:text-center ml-10 sm:ml-0 mr-10 sm:mr-0">
             <h3 class="font-bold text-2xl">Recibí promos exclusivas dejándonos tu email</h3>
             <form class="mt-2" action="suscripcionExtitosa.html">
