--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crudo Style Clothes</title>
+    <title>Inicio - Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -11,7 +11,6 @@
 <body class="bg-indigo-100">
 
     <!--Cabecera y portada hero-->
-    <!--Revisar porqué al agregarle flex y flex-col al section, me soluciona el desplazamiento del div-->
     <section class="bg-[url(img/bg-header.webp)] h-screen w-auto text-indigo-50 flex flex-col bg-cover">
         <header class="py-4 bg-indigo-600 flex flex-wrap justify-center lg:justify-around lg:flex-nowrap lg:items-center">
             <a class="text-5xl sm:text-6xl lg:text-5xl mb-4 lg:mb-0 bbh-bogle text-indigo-50 ts-text" href="index.html">Crudo<span class="dancing-script-400 text-red-500">StyleClothes</span></a>
@@ -77,19 +76,19 @@
 
         <!--Tarjetas-->
         <div class="flex flex-wrap gap-4 justify-center md:flex-nowrap mt-10">
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/campera1.webp" alt="campera kevenly eleven">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
                 <p class="text-center text-xl py-4">$150.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/campera2.webp" alt="campera kevenly rumble">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Rumble</h3>
                 <p class="text-center text-xl py-4">$190.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] hidden sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] md:block shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] hidden sm:w-[45%] md:w-[30%] md:max-w-100 md:block shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/campera3.webp" alt="campera kevenly chill">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Chill</h3>
                 <p class="text-center text-xl py-4">$90.000</p>
@@ -109,19 +108,19 @@
 
         <!--Tarjetas-->
         <div class="flex flex-wrap gap-4 justify-center md:flex-nowrap mt-10">
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/carpeta-oficio.webp" alt="carpetas de oficio">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Carpetas Oficio</h3>
                 <p class="text-center text-xl py-4">$21.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/fichero-020.webp" alt="fichero 020">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Fichero 020</h3>
                 <p class="text-center text-xl py-4">$19.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] hidden sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] md:block shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] hidden sm:w-[45%] md:w-[30%] md:max-w-100 md:block shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/tarjetero.webp" alt="">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Tarjetero Plegable</h3>
                 <p class="text-center text-xl py-4">$12.000</p>
@@ -141,19 +140,19 @@
 
         <!--Tarjetas-->
         <div class="flex flex-wrap gap-4 justify-center md:flex-nowrap mt-10">
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/bandolera-ines.webp" alt="bandolera ines">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Bandolera Ines</h3>
                 <p class="text-center text-xl py-4">$50.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] sm:w-[45%] md:w-[30%] md:max-w-100 shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/mochila-monster.webp" alt="mochila monster">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Mochila Monster</h3>
                 <p class="text-center text-xl py-4">$55.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
-            <article class="bg-indigo-50 min-w-90 max-w-[90%] hidden sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] md:block shadow-md shadow-gray-400 py-4">
+            <article class="bg-indigo-50 w-[90%] hidden sm:w-[45%] md:w-[30%] md:max-w-100 md:block shadow-md shadow-gray-400 py-4">
                 <img class="w-[90%] mx-auto" src="img/mochila-agata.webp" alt="mochila agata">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Mochila Agata</h3>
                 <p class="text-center text-xl py-4">$50.000</p>
